style.css
/* ... */
.box-select .select {
  border: 1px solid #dddddd;
  float: left;
  height: 48px;
  margin-right: 25px;
  width: 176px;
}

.box-select .select input[type="date"] {
  text-transform: uppercase;
  height: 100%;
}

.box-select .select input[type="date"]::-webkit-inner-spin-button {
  display: none;
}

.select>select {
  -moz-appearance: none;
  -webkit-appearance: none;
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  cursor: pointer;
  position: relative;
  z-index: 99;
}

.select>select:focus {
  outline: 0;
}

.search-form button {
  border: 0 none;
  color: #ffffff;
  line-height: 48px;
  text-transform: uppercase;
  width: 182px;
}

.box-select .select {
  position: relative;
}

.box-select .select::after {
  content: "";
  font-family: "Material-Design-Iconic-Font";
  font-size: 18px;
  position: absolute;
  right: 9px;
  top: 14px;
  z-index: 1;
}

/* .box-select .select::after {
    content: "\f331";
} */

.box-select .select.arrow::after {
  content: "\f2f2";
  font-size: 24px;
  top: 8px;
}

.about-text {
  padding-top: 90px;
}

.about-text .section-title {
  padding: 0;
}

.about-links>a {
  border: 1px solid #f1f1f1;
  color: #b5876d;
  display: table;
  float: left;
  font-size: 18px;
  height: 38px;
  margin-right: 15px;
  text-align: center;
  transition: all 0.3s linear 0s;
  width: 38px;
}

.about-links>a i {
  display: table-cell;
  vertical-align: middle;
}

.about-links>a:hover {
  background: #b5876d none repeat scroll 0 0;
  border-color: #b5876d;
  color: #ffffff;
}

.about-links {
  padding-top: 37px;
}

.video-wrapper,
.video-overlay {
  position: relative;
}

.video-overlay::after {
  background: rgba(0, 0, 0, 0.25) none repeat scroll 0 0;
  content: "";
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease 0s;
  width: 100%;
}

.video-wrapper:hover .video-overlay::after {
  opacity: 1;
}

.video-overlay>img {
  width: 100%;
}

.video-popup {
  bottom: 0;
  color: #ffffff;
  cursor: pointer;
  font-size: 72px;
  height: 60px;
  left: 0;
  line-height: 58px;
  margin: auto;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: all 0.5s ease 0s;
  width: 60px;
  z-index: 2;
}

.video-popup i {
  line-height: 58px;
}

.video-wrapper .video-popup:hover {
  color: #c6c6c6;
}

.video-wrapper:hover .video-popup {
  opacity: 1;
}

/*----------------------------------------*/
/*  2. Room Area
/*----------------------------------------*/
.room-area .container-fluid {
  padding: 0;
}

.single-room {
  float: none;
  width: 50%;
  position: relative;
}

.single-room.small {
  width: 50%;
}

.single-room.large {
  width: 50%;
}

.single-room.medium {
  width: 50%;
}

.single-room img {
  max-width: 100%;
}

.room-hover {
  bottom: 0;
  height: 100%;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
}

.room-hover:after {
  background-color: rgba(0, 0, 0, 0.5);
  bottom: 0;
  content: "";
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease-in 0.4s;
  width: 100%;
}

.single-room:hover .room-hover:after {
  opacity: 1;
  transition-delay: 0.2s;
}

.single-room>h3 {
  color: #ffffff;
  left: 50%;
  margin-bottom: 19px;
  opacity: 1;
  padding: 0 20px;
  position: absolute;
  text-align: center;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.2s ease 0s;
  width: 100%;
  z-index: 1;
}

.single-room:hover>h3 {
  opacity: 0;
  transition-delay: 0s;
}

.hover-text>h3 {
  color: #ffffff;
  transition: all 0.3s ease 0s;
  width: 100%;
  margin-bottom: 15px !important;
  top: auto !important;
  position: relative !important;
}

.hover-text>p {
  color: #ffffff;
  opacity: 0;
  padding: 0 10px !important;
  transform: translateY(100px);
  transition: all 0.3s ease-in-out 0.1s;
  bottom: auto !important;
  position: relative !important;
}

.large .hover-text>p {
  padding: 0 10px;
}

.single-room:hover p {
  opacity: 1;
  transform: translateY(0px);
  transition-delay: 0.2s;
}

.hover-text>h3:hover a {
  color: #b5876d;
}

.hover-text {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hover-text .room-btn {
  opacity: 0;
  transform: translateY(100px);
  transition: all 0.3s ease-in-out 0.1s;
  bottom: auto !important;
  position: relative !important;
}

.single-room:hover .room-btn {
  opacity: 1;
  transform: translateY(0px);
  transition-delay: 0.5s;
}

.hover-text .default-btn {
  display: inline-block;
  line-height: 38px;
  margin-top: 37px;
  padding: 0 22px;
}

.p-amount {
  bottom: 26px;
  color: #ffffff;
  position: absolute;
  right: 28px;
  transform: translateX(100px);
  transition: all 0.3s ease-in-out 0.1s;
  z-index: 2;
}

.p-amount>span {
  display: block;
  font-family: "Raleway", sans-serif;
  font-size: 30px;
  font-weight: 700;
}

.p-amount>span.count {
  font-size: 15px;
  font-weight: 400;
  padding-top: 3px;
}

.single-room:hover .p-amount {
  opacity: 1;
  transform: translateX(0px);
  transition-delay: 0.3s;
}

.single-room.large:hover .hover-text>h3 {
  top: 29%;
}

.single-room.large .hover-text>p {
  bottom: 44%;
}

.single-room.large .hover-text>.room-btn {
  bottom: 26%;
}

/*----------------------------------------*/
/*  3. Services Area
/*----------------------------------------*/
.nav.nav-tabs {
  border: 0 none;
}

.nav-tabs>li>a {
  background: #f1f1f1 !important;
  border: 0 none;
  border-radius: 0;
  line-height: 24px;
  margin: 0;
  padding: 10px 0 12px;
}

.title {
  font-family: "raleway";
  font-size: 18px;
  font-weight: 700;
  margin-bottom: 6px;
}

span.title,
span.text {
  color: #444444;
  display: block;
  padding-left: 80px;
}

span.image {
  display: block;
  left: 20px;
  position: absolute;
  top: 27px;
}

.nav-tabs>.nav-item {
  margin-bottom: 20px;
  width: 100%;
  position: relative;
}
/* ... */

